--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipsToChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipsToChange.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
+﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TipMonitor>
 <div class="badge">Aantal:@Model.Count()</div>
 @Html.Grid(Model).Named("TipsToChangeTable").Build(columns =>
 {
