--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tcp_logGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tcp_logGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TCP_LOG>
+﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TCP_LOG>
 
 @Html.Grid(Model).Named("TCP_LOGGrid").Build(columns =>
 {
