--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipDressLogFile>
+﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TipDressLogFile>
 
 @Html.Grid(Model).Named("TipDressLogFileGrid").Build(columns =>
 {
