--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipLifeExpectationsGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipLifeExpectationsGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipLifeExpectations>
+﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TipLifeExpectations>
 
 @Html.Grid(Model).Named("TipLifeExpectationsGrid").Build(columns =>
 {
