--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipwearBeforeChangeGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipwearBeforeChangeGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipwearBeforeChange>
+﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TipwearBeforeChange>
 @Html.Grid(Model).Named("TipwearBeforeChangeGrid").Build(columns =>
 {
     columns.Add(c => c.controller_name).Titled("Robot");
