--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
+﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.NGAC_TipMonitor>
 
 @Html.Grid(Model).Named("TipStatusGrid").Build(columns =>
 {
