--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipDressData.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipDressData.cshtml
@@ -1,6 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipDressLogFile>
-
-@*set title*@
+﻿@*set title*@
 @{
     ViewBag.Title = "TipDressData";
 }
