--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
@@ -1,6 +1,4 @@
-﻿@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipLifeExpectations>
-
-@*set title*@
+﻿@*set title*@
 @{
     ViewBag.Title = "TipLifeExpectations";
 }
