--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
@@ -4,7 +4,7 @@
 
         <div class="alert alert-info">
             <h4>
-                Tipinfo for location: <strong>@ViewBag.location</strong> tool_nr:  <strong>@ViewBag.tool_nr</strong>
+                Tipinfo for location: <strong>@ViewBag.location</strong> tool_nr:  <strong>@ViewBag.tool_nr</strong> (NGAC)
                 <a class="far fa-window-close fa-2x clickable text-black-50 float-right" data-dismiss="modal"></a>
             </h4>
         </div>
