some cleanup in navbar

--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/WeldgunTool.cshtml
@@ -11,7 +11,7 @@ ElectrodeNo: @Html.DropDownList("ElectrodeNo", null, htmlAttributes: new { @clas
 
 <hr />
 <div class="alert alert-danger">
-    Oude tool is nog beschikbaar via "Toolkit" in de taskbar.
+    Oude tool is nog beschikbaar via <a href="http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData OLD</a>
     Gelieve deze nieuwe tool te gebruiken oude gaat binnenkort definitief weg.
 </div>
 <hr />
