--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -5,12 +5,18 @@
 
 <div class="jumbotron">
     <h2>Webviews tableau</h2>
-    <h5>
-        (gebruik user:
-        <strong>e6308159</strong> pw:
-        <strong>e6308159</strong> om rechtstreeks in te loggen in <a href="https://tableau-test.volvocars.biz/#/signin?closePopupWhenDone=true&site=Ghent&authSetting">Tableau server &raquo;</a>)
-    </h5>
-    *Enkel nodig om dashborden te bekijken die hieronder NIET beschikbaar zijn.
+    <div class="badge text-left">
+        <h5>
+            (gebruik user:
+            <strong>e6308159</strong> pw:
+            <strong>e6308159</strong> om rechtstreeks in te loggen in <a href="https://tableau-test.volvocars.biz/#/signin?closePopupWhenDone=true&site=Ghent&authSetting">Tableau server &raquo;</a>)
+        </h5>
+        *Enkel nodig om dashborden te bekijken die hieronder NIET beschikbaar zijn.
+    </div>
+
+    <div class="badge text-left">
+        <a href="https://sway.com/5uelU8Pra3GK1N9i">Tableau Manual</a>
+    </div>
 </div>
 
 <div class="card">
