--- a/EqUiWebUi/Views/Home/About.cshtml
+++ b/EqUiWebUi/Views/Home/About.cshtml
@@ -1,11 +1,14 @@
 ﻿@{
     ViewBag.Title = "About";
 }
+<div class="">
+    <h1>@ViewBag.Title</h1>
+</div>
 
 <div class="card card-body">
     <div>
         <h2>Learn</h2>
-        @MyHtmlHelpers.EquiLink("file://gnlsnm0101.gen.volvocars.net/PROJ/6308-SHR-VCC22700/Equi_TheDataStory.pdf", "fas fa-power-off", "Equi_TheDataStory", helperText: "A good place to start.", OpenNewWindow: true)
+        @MyHtmlHelpers.EquiLink("file://gnlsnm0101.gen.volvocars.net/PROJ/6308-SHR-VCC22700/Equi_TheDataStory.pdf", "fas fa-power-off", "Equi_TheDataStory", helperText: "A good place to start.")
     </div>
 </div>
 
@@ -14,12 +17,6 @@
 <div class="card card-body">
     <h2>We work best with Chrome!</h2>
     <div>
-
         @MyHtmlHelpers.EquiLink("https://www.google.com/chrome/browser/desktop/index.html", "fab fa-chrome", "Chromeinstal", helperText: "Use this link to instal chrome.")
-
-        <hr />
-
-        <h4>For optimal use you should install this chrome extension.</h4>
-        @MyHtmlHelpers.EquiLink("https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb", "fab fa-chrome", "ClickOnce for Google Chrome", helperText: "Needed to launch the VSTO click once tools in the chrome browser.")
     </div>
 </div>
