--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -1,26 +1,59 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+/**/
+
+ViewBag.Title = "Contact";
 }
-
-<div class="card card-body">
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
-
-    <address>
-        Volvo Cars Gent<br />
-        <i class="fas fa-phone"></i>
-        09 250 30 69
-    </address>
-
-    <address>
-        <i class="fas fa-envelope"></i> <strong> Support:</strong>   <a href="mailto:sam.de.beul@volvocars.com">sam.de.beul@volvocars.com</a><br />
-    </address>
-    <div>
-        @MyHtmlHelpers.EquiLink("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/EQdbDevelopment/AllItems.aspx", "fas fa-bug", "IssueTracking", iconClasses: "bg-warning", helperText: "Report bugs or request features", OpenNewWindow: true)
-       <hr />
-        @MyHtmlHelpers.EquiLink("https://github.com/SDEBEUL/EQUI/graphs/commit-activity", "fab fa-github", "Github", helperText: "No secrets, every line of code is on github", OpenNewWindow: true)
-    </div>
-
+<div class="">
+    <h1>@ViewBag.Title</h1>
 </div>
+
+@if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCCH")
+{
+<div class="card card-body">
+
+    <h3>Volvo Cars Charleston (VCCH)</h3>
+    <hr />
+    <address>
+        Olson, Troy<br />
+        <i class="fas fa-phone"></i>
+        +18439348395
+        <i class="fas fa-envelope"></i> <strong>system manager</strong>   <a href="mailto:troy.olson@volvocars.com">troy.olson@volvocars.com</a><br />
+    </address>
+</div>
+
+    <hr />
+ }
+
+    <div class="card card-body">
+
+        <h3>Volvo Cars Gent (VCG)</h3>
+        <hr />
+        <address>
+            Van volsem II, Alain (AVV)<br />
+            <i class="fas fa-phone"></i>
+            +32-9-2502725
+            <i class="fas fa-envelope"></i> <strong>system manager</strong>   <a href="mailto:alain.van.volsem.ii@volvocars.com">alain.van.volsem.ii@volvocars.com</a><br />
+        </address>
+
+        <address>
+            De beul, Sam (S.)<br />
+            <i class="fas fa-phone"></i>
+            +329 250 30 69
+            <i class="fas fa-envelope"></i> <strong>system development</strong>   <a href="mailto:sam.de.beul@volvocars.com">sam.de.beul@volvocars.com</a><br />
+        </address>
+
+        <address>
+            Coppejans, Jens (J.)<br />
+            <i class="fas fa-phone"></i>
+            +3292507242
+            <i class="fas fa-envelope"></i> <strong>system development</strong>   <a href="mailto:jens.coppejans@volvocars.com">jens.coppejans@volvocars.com</a><br />
+        </address>
+
+        <hr />
+        @MyHtmlHelpers.EquiLink("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/EQdbDevelopment/AllItems.aspx", "fas fa-bug", "IssueTracking", iconClasses: "bg-warning", helperText: "Report bugs or request features", OpenNewWindow: true)
+        <hr />
+        @MyHtmlHelpers.EquiLink("https://github.com/SDEBEUL/EQUI/graphs/commit-activity", "fab fa-github", "Github", helperText: "No secrets, every line of code is on github", OpenNewWindow: true)
+
+    </div>
 
 
