--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -28,15 +28,18 @@
         </h5>
     </div>
     <div class="card-body">
-        @MyHtmlHelpers.EquiLink("/Supervision/Table/PloegRapport", "far fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 1 }, null))
-        @MyHtmlHelpers.EquiLink("/Supervision/Table/Supervisie", "far fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 2 }, null))
-        @MyHtmlHelpers.EquiLink("/Alert/Alert/Listalerts", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning", helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 3 }, null))
+        @MyHtmlHelpers.EquiLink("/Supervision/Table/PloegRapport", "far fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription)
+        @MyHtmlHelpers.EquiLink("/Supervision/Table/Supervisie", "far fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription)
+        @MyHtmlHelpers.EquiLink("/Alert/Alert/Listalerts", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning")
         @MyHtmlHelpers.EquiLink("https://volvocars.plantview.se/?v=ps&t=p:default,c:projectselector,m:t&ps=ps1&ps1=q:vcg", "fas fa-industry", "Plantview", helperText: "3d scans of all volvo plants")
         @if (EqUiWebUi.MyBooleanExtensions.IsAreaEnabled("Maximo_ui"))
         {
             @MyHtmlHelpers.EquiLink("/Maximo_ui/Workorder/Workorders", "fas fa-briefcase", "Maximo_ui", helperText: "Fast and simple Maximo interface")
         }
-        @MyHtmlHelpers.EquiLink("/Tableau/index", "fas fa-chart-line", "Tableau", helperText: "Dashboards done right")
+        @if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCG")
+        {
+            @MyHtmlHelpers.EquiLink("/Tableau/index", "fas fa-chart-line", "Tableau", helperText: "Dashboards done right")
+        }
         @MyHtmlHelpers.EquiLink("/Tiplife/Electrode/CurrentTipstatus", "fas fa-industry", "Electrode", helperText: "Alles in verband met de Electrodes (greenfield)")
     </div>
 </div>
