--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,27 +32,20 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item">
-                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a href="@Url.Action("WeldgunTool", "Electrode", new { area = "Tiplife"}, null)">NEW! WeldgunData</a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li class="dropdown-item">
-                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigiboardLauncher</a>
-                            <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 4 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
+                            <div class="badge badge-info">
+                                <h6>The tools use Microsoft Click once deployment!</h6>
+                            </div>
+                            <p>@MyHtmlHelpers.EquiLink("https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb", "fab fa-chrome", "ClickOnce for Google Chrome", helperText: "Needed to launch click once tools in the chrome browser.")</p>
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
-                            <a href="https://sway.com/csCS9cdjEpcpPhw0?ref=Link">VSTO Excel (Manual)</a>
+                            @MyHtmlHelpers.EquiLink(@Url.Action("WeldgunTool", "Electrode", new { area = "Tiplife"}, null), "fab fa-chrome", "WeldgunTool", helperText: "View data and control charts")
                         </li>
                         <li class="dropdown-item">
-                            <a href="file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/VSTO/DEPLOYMENTBASE/ExcelAddInEquipmentDatabase.vsto">VSTO Excel (install)</a>
-                            <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 5 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
+                            @MyHtmlHelpers.EquiLink("http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application", "fab fa-chrome", "DigiboardLauncher", helperText: "Startup tool for kiosks",helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 4 }, null))
                         </li>
-                        <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
-                            <a href="https://sway.com/5uelU8Pra3GK1N9i">Tableau Manual</a>
+                            @MyHtmlHelpers.EquiLink("file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/VSTO/DEPLOYMENTBASE/ExcelAddInEquipmentDatabase.vsto", "fab fa-chrome", "VSTO Excel (install)", helperText: "Excel ribbon plugin to acces the database (installation file)")
                         </li>
                     </ul>
                 </li>
@@ -62,7 +55,7 @@
             <!-- pull right part -->
             <div class="navbar-nav ml-auto">
                 <div class=" nav-item">
-                    <a class="far fa-id-badge fa-2x text-white fa-2x userhelp" data-container="body" data-toggle="popover" data-original-title="@User.Identity.Name"></a>
+                    <a class="far fa-id-badge fa-2x text-white fa-2x clickable userhelp" data-container="body" data-toggle="popover" data-original-title="@User.Identity.Name"></a>
 
                     <a href="#"><span style="padding-left:20px" class=""></span></a>
 
@@ -70,7 +63,7 @@
 
                     <a href="#"><span style="padding-left:20px" class=""></span></a>
 
-                    <a class="fas fa-arrows-alt text-white" id="fullscreenNav" data-toggle="tooltip" data-placement="left" title="Go fullscreen"></a>
+                    <a class="fas fa-arrows-alt text-white clickable" id="fullscreenNav" data-toggle="tooltip" data-placement="left" title="Go fullscreen"></a>
 
                 </div>
             </div>
