--- a/EqUiWebUi/Views/Wiki/Edit.cshtml
+++ b/EqUiWebUi/Views/Wiki/Edit.cshtml
@@ -4,17 +4,17 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>Wiki</h4>
+    <h4>Wiki: @Html.Label(Model.Name)</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Name)
+    @Html.HiddenFor(model => model.createDate)
+    @Html.HiddenFor(model => model.l_user_id)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -24,31 +24,14 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.wiki1, htmlAttributes: new { @class = "control-label col-md-4" })
+        @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-4" })
         <div class="col-md-12">
-            <textarea id="wiki" name="wiki1">@Model.wiki1</textarea>
-            @Html.ValidationMessageFor(model => model.wiki1, "", new { @class = "text-danger" })
+            <textarea id="wiki" name="Body">@Model.Body</textarea>
+            @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Comments, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Comments, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Comments, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
@@ -58,17 +41,13 @@
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section scripts{
     @*https://summernote.org/getting-started/*@
     <link href="~/Content/summernote-bs4.css" rel="stylesheet" />
     <script src="~/Scripts/summernote-bs4.js"></script>
     <script>
         //for wiki
-        $('#wiki1').summernote({
+        $('#wiki').summernote({
             minHeight: null,           
             maxHeight: null,          
             focus: false               
