--- a/EqUiWebUi/Views/Home/About.cshtml
+++ b/EqUiWebUi/Views/Home/About.cshtml
@@ -20,8 +20,13 @@
             Any modern browser will do Edge / Chrome / Firefox / Opera  <strong>*Just not Internet explorer.</strong>
             <br />
             <h3>We work best with Chrome</h3>
-            <div>
-                @MyHtmlHelpers.EquiLink("https://www.google.com/chrome/browser/desktop/index.html", "fab fa-chrome", "Chromeinstal", helperText: "Use this link to install chrome.")
+            <div class="row">
+                <div class="col-6">
+                    @MyHtmlHelpers.EquiLink("https://www.google.com/chrome/browser/desktop/index.html", "fab fa-chrome", "Chromeinstal", helperText: "Use this link to install chrome using click once")
+                </div>
+                <div class="col-6">
+                    @MyHtmlHelpers.EquiLink("https://volvocars.service-now.com/sp?id=sc_cat_item&sys_id=7aa8d7d1db605b00c3235487dc961947", "fab fa-chrome", "Chromeinstal", helperText: "Use this link to install chrome using snow (official it request)")
+                </div>       
             </div>
 
         </div>
