--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -9,7 +9,7 @@
     <div class="card-header bg-dark text-white row">
         <h4 class="col-8">
             Alerts
-            <a class="fas fa-info-circle text-white clickable" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend "></a>
+            <a class="fas fa-info-circle text-white clickable MyPopovers" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend" href="@Url.Action("_legend")"></a>
             @if (ViewBag.alertGroup != "")
             {
                 <span class="badge badge-pill badge-warning">Filter on alert group: @ViewBag.alertGroup</span>
@@ -100,18 +100,6 @@
         if ($('[data-name="h_alert"]>table>tbody>tr').length == 1) {
             $('[data-name="h_alert"]>table>tbody>tr>td:first').trigger('click');
         }
-
-        //enable popover for legend
-        $("#LegendPopover").popover({
-            html: true,
-            content: function () {
-                return $.ajax({
-                    url: '@Url.Action("_legend")',
-                    dataType: 'html',
-                    async: false
-                }).responseText;
-            }
-        });
 
         //enable tooltips
         $('[data-toggle="popover"]').tooltip();
