--- a/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
@@ -5,7 +5,7 @@
     <div class="card-header bg-dark text-white">
         <h4>
             Supervisie
-            <a class="fas fa-info-circle text-white clickable" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend "></a>
+            <a class="fas fa-info-circle text-white clickable MyPopovers" data-container="body" data-toggle="popover" data-placement="bottom" title="Show Legend" href="@Url.Action("_legend")"></a>
         </h4>
     </div>
     <div id="SupervisieGridSpincontainer" style="position:relative">
@@ -51,19 +51,6 @@
         //on modal close
         $('#MyModal').on('hidden.bs.modal', function (e) {
             $('#MyModal').html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-4x fa-fw text-white' ></i ><span class='sr-only'>Loading...</span></div >");
-        });
-
-        
-        //enable popover for legend
-        $("#LegendPopover").popover({
-            html: true,
-            content: function () {
-                return $.ajax({
-                    url: '@Url.Action("_legend")',
-                    dataType: 'html',
-                    async: false
-                }).responseText;
-            }
         });
 
         //enable tooltips
