--- a/EqUiWebUi/Views/Wiki/_GetWiki.cshtml
+++ b/EqUiWebUi/Views/Wiki/_GetWiki.cshtml
@@ -1,7 +1,10 @@
 ﻿@model EqUiWebUi.Models.Wiki
 <div class="card">
     <div class="card-header card-title bg-dark text-white">
-        <h3>@Model.Title</h3>
+        <h3>
+        @Model.Title
+            <a class="clickable far fa-window-restore text-white" href="@Url.Action("GetWiki","Wiki",new {Area ="", id = Model.Name })"></a>
+        </h3>
     </div>
     <div class="card-body">
         @if (Model.Body != null)
