made info button pretty

--- a/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
+++ b/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
@@ -22,7 +22,7 @@
     @*show helplink only if there is one*@
     @if (helpurl != "")
     {
-        <i class="fas fa-info-circle fa-2x clickable MyPopovers" href="@helpurl" data-container="body" data-toggle="popover" data-placement="bottom"></i>
+        <i class="badge badge-dark text-white fas fa-rotate-270 fa-info-circle clickable MyPopovers" style="font-size: 20px;" href="@helpurl" data-container="body" data-toggle="popover" data-placement="bottom">info</i>
     }
 </div>
 }
